name:                learn-crypto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blackheaven/learn-crypto#readme
license:             BSD2
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2017 Gautier DI FOLCO
category:            crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.Ciphering.Stream
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite learn-crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , learn-crypto
                     , doctest
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackheaven/learn-crypto
